<resources>
    <string name="app_name">MyTestProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_BIN">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="hint">Enter 8 numbers</string>
    <string name="search">search</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="country">COUNTRY</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="bank">BANK</string>
    <string name="bin">BIN:</string>
    <string name="history">history</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loadFail">Ошибка загрузки!</string>
</resources>